Sidebar overflow bug.

--- a/ETick/WebContent/css/elements/sidebar.css
+++ b/ETick/WebContent/css/elements/sidebar.css
@@ -1,6 +1,7 @@
 core-header-panel {
 	width: 240px;
 	height: 100%;
+	overflow: scroll;
 }
 
 .core-header {
